[STYLE] Primitive-of tooltips now are left-positioned to avoid being cut-off on smaller screens

--- a/templates/src/styles/globals/tooltip.scss
+++ b/templates/src/styles/globals/tooltip.scss
@@ -29,7 +29,20 @@ START - Tooltip */
 		background: $brand-grey-darker;
 	}
 
-	&.-below {
+	// Position variations (appended to parent container)
+	// (Note that "above right" is the default positioning)
+
+	.-tooltip-pos__above-left & {
+		left: unset;
+		right: 0;
+	}
+
+	.-tooltip-pos__below-right & {
+		bottom: unset;
+		top: calc(100% + 10px);
+	}
+
+	.-tooltip-pos__below-left & {
 		bottom: unset;
 		left: unset;
 		right: 0;
